nginx_deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxapp
  labels:
    app: nginxapp
spec:
  containers:
  - image: greenbrillance.azurecr.io/frontend/hellomantra:env:BuildId
    name: nginximage
    imagePullPolicy: Always
    ports:
    - containerPort: 80
      protocol: TCP
