nginxdeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellovipin
  namespace: hellomantra
spec:
  type: LoadBalancer
  selector:
    app: hellovipin_app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellovipin-deploy
  namespace: hellomantra
  labels:
    app: hellovipin_app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hellovipin_app
  template:
    metadata:
      labels:
        app: hellovipin_app
    spec:
      containers:
        - name: hellovipin-container
          image: greenbrillance.azurecr.io/images/hellovipin:1.0.1
          ports:
            - containerPort: 80
