nginx_ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxapp
  labels:
    app: nginxapp
spec:
  containers:
  - image: greenbrillance.azurecr.io/frontend/hellomantra:latest
    name: nginximage
    ports:
    - containerPort: 80
      protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: nginxapp
spec:
  selector:
    app: nginxapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80	
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: nginxapp
            port:
              number: 80
